// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependencies reducer should handle ADD_DEPENDENCY_ERROR 1`] = `
Object {
  "foo": Object {
    "react-router": Object {},
  },
}
`;

exports[`dependencies reducer should handle ADD_DEPENDENCY_FINISH 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "dependency description",
      "homepage": "https://dependency-homepage.io",
      "keywords": Array [
        "key",
        "words",
      ],
      "license": "MIT",
      "name": "redux",
      "repository": "https://github.com",
      "status": "idle",
      "version": "3.2",
    },
  },
}
`;

exports[`dependencies reducer should handle ADD_DEPENDENCY_START 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "",
      "homepage": "",
      "license": "",
      "name": "redux",
      "repository": "",
      "status": "installing",
      "version": "",
    },
  },
}
`;

exports[`dependencies reducer should handle DELETE_DEPENDENCY_ERROR 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "dependency description",
      "homepage": "https://dependency-homepage.io",
      "keywords": Array [
        "key",
        "words",
      ],
      "license": "MIT",
      "name": "redux",
      "repository": "https://github.com",
      "status": "idle",
      "version": "3.2",
    },
  },
}
`;

exports[`dependencies reducer should handle DELETE_DEPENDENCY_FINISH 1`] = `
Object {
  "foo": Object {},
}
`;

exports[`dependencies reducer should handle DELETE_DEPENDENCY_START 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "dependency description",
      "homepage": "https://dependency-homepage.io",
      "keywords": Array [
        "key",
        "words",
      ],
      "license": "MIT",
      "name": "redux",
      "repository": "https://github.com",
      "status": "deleting",
      "version": "3.2",
    },
  },
}
`;

exports[`dependencies reducer should handle LOAD_DEPENDENCY_INFO_FROM_DISK 1`] = `
Object {
  "baz": Object {},
  "foo": Object {
    "redux": Object {},
  },
}
`;

exports[`dependencies reducer should handle UPDATE_DEPENDENCY_ERROR 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "dependency description",
      "homepage": "https://dependency-homepage.io",
      "keywords": Array [
        "key",
        "words",
      ],
      "license": "MIT",
      "name": "redux",
      "repository": "https://github.com",
      "status": "idle",
      "version": "3.2",
    },
  },
}
`;

exports[`dependencies reducer should handle UPDATE_DEPENDENCY_FINISH 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "dependency description",
      "homepage": "https://dependency-homepage.io",
      "keywords": Array [
        "key",
        "words",
      ],
      "license": "MIT",
      "name": "redux",
      "repository": "https://github.com",
      "status": "updating",
      "version": "4.0",
    },
  },
}
`;

exports[`dependencies reducer should handle UPDATE_DEPENDENCY_START 1`] = `
Object {
  "foo": Object {
    "redux": Object {
      "description": "dependency description",
      "homepage": "https://dependency-homepage.io",
      "keywords": Array [
        "key",
        "words",
      ],
      "license": "MIT",
      "name": "redux",
      "repository": "https://github.com",
      "status": "updating",
      "version": "3.2",
    },
  },
}
`;
